upgrade gradle wrapper - revert modularization - fix jnativehook issue